<resources>

    <!--Nav-->
    <string name="app_name">书享校园</string>
    <string name="nav_menu_home">首页</string>
    <string name="nav_menu_bookToReturn">待还图书</string>
    <string name="nav_menu_historyList">历史借阅</string>
    <string name="nav_menu_Collection">我的收藏</string>
    <string name="nav_menu_tag">标签分类</string>
    <string name="nav_menu_like">我的想看</string>
    <string name="nav_menu_system">系统</string>
    <string name="nav_menu_ChangeSection">更改标签</string>
    <string name="nav_menu_Settings">设置</string>
    <!--Error-->
    <string name="error">加载出错</string>
    <!--MovieDetails-->
    <string name="md_more">更多</string>
    <string name="md_put">收起</string>
    <string name="md_movie_type">电影类型：</string>
    <string name="md_movie_country">上映国家：</string>
    <string name="md_movie_year">上映时间：</string>
    <string name="md_movie_original">原名：</string>
    <string name="md_movie_brief">简介</string>
    <string name="md_movie_actor">影人</string>
    <string name="md_movie_evaluation">人评价</string>
    <string name="actor_title">影人</string>
    <string name="md_load_likemovie">喜欢这部电影的人也喜欢...</string>
    <string name="md_load_error">加载失败...</string>
    <string name="md_load_ing">加载中...</string>

    <!--ActorDetils-->
    <string name="ad_nomore">暂时没有简介...</string>
    <string name="ad_brief">个人简介</string>
    <string name="ad_works">代表作品</string>
    <string name="ad_sex">性别：</string>
    <string name="ad_country">出生地：</string>

    <!--BookDetils-->
    <string name="book_author">作者：</string>
    <string name="book_press">出版社：</string>
    <string name="book_loc">图书位置：</string>
    <string name="book_pages">页数：</string>
    <string name="book_actor_info">作者简介</string>
    <string name="book_list">目录/试读</string>
    <string name="book_like">喜欢读这本书的人也喜欢...</string>


    <!--LabelFragment-->
    <string name="tip_drag">长按编辑,点击删添,拖拽排序</string>
    <string name="my_label">我的标签</string>
    <string name="other_label">其他标签</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>

    <!--Collection-->
    <string name="collection_success">收藏成功!</string>
    <string name="collection_fail">收藏失败!</string>
    <string name="collection_cancel">取消收藏成功!</string>
    <string name="collection_cancel_fail">取消收藏失败!</string>
    <string name="book_detail_borrow">借阅</string>
    <string name="title_activity_login">Sign in</string>
    <string name="like_success">想看成功!</string>
    <string name="like_fail">想看失败!</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_register">注册</string>
    <string name="back_book_btn">归还</string>
    <string name="string_exit">退出登录</string>
    <string name="string_nav_login">点击登录</string>
</resources>
