<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_menu_book"
            android:checkable="true"
            android:icon="@mipmap/home"
            android:title="@string/nav_menu_home"/>
        <item
            android:id="@+id/nav_menu_bookBack"
            android:checkable="true"
            android:icon="@mipmap/books"
            android:title="@string/nav_menu_bookToReturn"/>
        <item
            android:id="@+id/nav_menu_collection"
            android:checkable="true"
            android:icon="@mipmap/collection"
            android:visible="false"
            android:title="@string/nav_menu_Collection"/>
        <item
            android:id="@+id/nav_menu_tag"
            android:checkable="true"
            android:icon="@mipmap/tag"
            android:title="@string/nav_menu_tag"/>
        <item
            android:id="@+id/nav_menu_like"
            android:checkable="true"
            android:icon="@mipmap/like_list"
            android:title="@string/nav_menu_like"/>
        <!--<item
            android:id="@+id/nav_menu_historyList"
            android:checkable="true"
            android:icon="@mipmap/list"
            android:title="@string/nav_menu_historyList"/>-->
    </group>
    <item android:title="@string/nav_menu_system">
        <menu>
            <!--<item
                android:id="@+id/nav_menu_change"
                android:checkable="true"
                android:icon="@mipmap/label"
                android:title="@string/nav_menu_ChangeSection"
                />-->
            <item
                android:id="@+id/nav_menu_setting"
                android:checkable="true"
                android:icon="@mipmap/setting"
                android:title="@string/nav_menu_Settings"
                />
            <item
                android:id="@+id/nav_menu_exit"
                android:checkable="true"
                android:icon="@mipmap/exit"
                android:title="@string/string_exit"
                android:visible="false"
                />

        </menu>
    </item>

</menu>